# inlyse-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pr.yaml  release.yaml
docs/: README.md
docs/source/: about.rst  conf.py  index.rst  inlyse.rst  installation.rst  usage.rst
docs/source/_static/: custom.css
src/inlyse/: __init__.py  app.py  cli.py  exceptions.py
tests/: conftest.py  test_endpoints.py
tests/responses/: analysis.json  list.json  stats.json  upload_file.json  upload_link.json
