[project]
name = "inlyse"
description = "Python bindings for the INLYSE API"
license = "LICENSE.txt"
authors = [
    {"name" = "INLYSE GmbH", "email" = "info@inlyse.com"}
]
keywords = ["malware.ai", "inlyse",  "api", "python", "sdk"]
dynamic = [
    "version",
    "readme",
    "classifiers",
]


[tool.poetry]
name = "inlyse"
version = "1.0.7"  # semantic-release
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
inlyse-scanner = "inlyse.app:main"

[project.urls]
homepage = "https://www.inlyse.com"
documentation = "https://documentation.inlyse.cloud/python"
repository = "https://github.com/inlyse/inlyse-python"
changelog = "https://github.com/inlyse/inlyse-python/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/inlyse/inlyse-python/issues"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"
types-requests = "^2.32.4.20250913"
click = "^8.3.0"
tqdm = "^4.67.1"
loguru = "^0.7.3"
click-params = "^0.5.0"
types-tqdm = "^4.67.0.20250809"
requests-toolbelt = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pep8 = "^1.7.1"
pre-commit = "^4.4.0"
black = "^25.11.0"
isort = "^7.0.0"
mypy = "^1.18.2"
ruff = "^0.14.4"
packaging = "^25.0"
pyyaml = { version = "!=6.0.0,!=5.4.0,!=5.4.1" }

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
responses = "^0.25.8"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-napoleon = "^0.7"
myst-parser = "^4.0.1"
sphinx-click = "^6.1.0"
sphinx-toolbox = "^4.0.0"
standard-imghdr = "^3.13.0"
domdf-python-tools = "^3.10.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bdist_wheel]
universal = 1

[tool.sdist]
formats = "bztar"

[tool.black]
line-length = 79
target-version = ["py313"]
force-exclude = """
(
  /(
      docs/*
    |.*\\.egg-info
  )/
)
"""

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest]
norecursedirs = """
    .git
    .env
    dist
    build
"""
addopts = """
    -rxEfsw
    --strict
    --doctest-modules
    --doctest-glob=*.rst
    --tb=short
    --ignore=setup.py
    --ignore=.eggs
    --no-cov-on-fail
    --cov=inlyse
    --cov-report=term-missing
"""

[tool.isort]
ensure_newline_before_comments = true
use_parentheses = true
line_length = 79
multi_line_output = 3
include_trailing_comma = true
not_skip = "__init__.py"
verbose = true
skip = ".env"
skip_glob = ".env/**.py,.venv/**.py"

[tool.check-manifest]
ignore = ".coverage"

[[tool.mypy.overrides]]
module = "click_params"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests_toolbelt"
ignore_missing_imports = true
